# voice_agent

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  taskfile.yaml
alembic/: env.py
src/: agent.py  database_manager.py  models.py  start_calls.py  state_manager.py
src/scripts/: seed_db.py
tests/: test_agent.py  test_agent_simple.py
